--- a/wear/src/main/res/layout/activity_future_release.xml
+++ b/wear/src/main/res/layout/activity_future_release.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.wearable.view.BoxInsetLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jake.heartbeat04.MainActivity"
+    tools:context="com.example.jake.heartbeat04.FutureReleaseActivity"
     tools:deviceIds="wear">
 
-    <ListView
-        android:id="@+id/main_menu_list_view"
+    <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:entries="@array/main_menu_options"
-        app:layout_box="all" />
+        android:text="@string/were_sorry"
+        app:layout_box="all"
+        android:padding="20dp"/>
 
 </android.support.wearable.view.BoxInsetLayout>
